host libs through rawgit.com

--- a/search.html
+++ b/search.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>|\/|  [-  |\/|  ()  /?  |  /\  /\  |_</title>
+    <title>EW100 Memoriaal</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-    <script src="node_modules/angular/angular.min.js"></script>
-    <script src="node_modules/elasticsearch-browser/elasticsearch.angular.min.js"></script>
-    <script src="lib/elastic.js"></script>
-    <script src="lib/elasticui.min.js"></script>
+    <script src="https://cdn.rawgit.com/memoriaal/eMem/master/node_modules/angular/angular.min.js"></script>
+    <script src="https://cdn.rawgit.com/memoriaal/eMem/master/node_modules/elasticsearch-browser/elasticsearch.angular.min.js"></script>
+    <script src="https://cdn.rawgit.com/memoriaal/eMem/master/lib/elastic.js"></script>
+    <script src="https://cdn.rawgit.com/memoriaal/eMem/master/lib/elasticui.min.js"></script>
     <style>
         .sidebar {
             position: fixed;
@@ -56,7 +56,7 @@
           margin-bottom: 1em;
         }
         .rong {
-          font-size: 1.2em;
+          font-size: 0.5em;
           font-family: monospace;
           margin-top: 1em;
           margin-bottom: 1em;
