--- a/search.html
+++ b/search.html
@@ -91,7 +91,7 @@
     </script>
 
 </head>
-<body ng-app="tutorial" eui-index="'isikud1'" ng-init="indexVM.pageSize=50"
+<body ng-app="tutorial" eui-index="'isikud1'" eui-highlight="ejs.Highlight('eesnimi','perenimi','isanimi','sünniaasta','allikad.kirje').preTags('').postTags('')" eui-enabled="true" ng-init="indexVM.pageSize=50"
       eui-highlight="ejs.Highlight(allikad.kirje).preTags('<b>').postTags('</b>')"
       eui-enabled="true">
 
