--- a/search.html
+++ b/search.html
@@ -75,8 +75,7 @@
     <script>
         angular
             .module('tutorial', ['elasticui','ngSanitize'])
-            // .constant('euiHost', 'http://localhost:9200'); // ACTION: change to cluster address
-            .constant('euiHost', 'https://reader:reader@94abc9318c712977e8c684628aa5ea0f.us-east-1.aws.found.io:9243'); // ACTION: change to cluster address
+            .constant('euiHost', 'https://reader:reader@94abc9318c712977e8c684628aa5ea0f.us-east-1.aws.found.io:9243');
     </script>
     <script>
         function setFeedback() {
@@ -91,7 +90,7 @@
     </script>
 
 </head>
-<body ng-app="tutorial" eui-index="'isikud1'" eui-highlight="ejs.Highlight('eesnimi','perenimi','isanimi','sünniaasta','allikad.kirje').preTags('').postTags('')" eui-enabled="true" ng-init="indexVM.pageSize=50"
+<body ng-app="tutorial" eui-index="'isikud0'" eui-highlight="ejs.Highlight(['eesnimi','perenimi','isanimi','sünniaasta','allikad.kirje']).preTags('').postTags('')" eui-enabled="true" ng-init="indexVM.pageSize=50"
       eui-highlight="ejs.Highlight(allikad.kirje).preTags('<b>').postTags('</b>')"
       eui-enabled="true">
 
@@ -159,7 +158,7 @@
                 <div class="intro">Antud andmestik ei sisalda veel isikuid, kes olid represseeritud, kuid kes vabanesid
                 kinnipidamiskohast või asumiselt. Nende isikute andmed avatakse tutvumiseks 2017. aasta juunis.</div>
 
-                <div class="intro">Tagasiside tõrgete korral kirjutage palun aadressil: info@mnemosyne.ee</div>
+                <div class="intro">Tagasiside tõrgete korral kirjutage palun aadressil: memoriaal@mnemosyne.ee</div>
 
                 <p><hr>SA Eesti Mälu Instituut<br>
                 Suur-Ameerika 12, 10119, Tallinn<br>
@@ -182,7 +181,7 @@
                         <p>i: {{doc._source['isanimi'] === 'NULL' ? '???' : doc._source['isanimi']}}</p>
                         <p>{{doc._source['sünniaasta'] === 'NULL' ? '???' : doc._source['sünniaasta']}}
                          - {{doc._source['surmaaasta'] === 'NULL' ? '???' : doc._source['surmaaasta']}}</p>
-                        <!-- <p>h: {{doc._source['kasHukkunud']}}</p> -->
+                        <p>id: {{doc._id}}</p>
                         <div class="btn-group">
                           <a class="btn btn-sm active {{doc._source.kasHukkunud === '1' ? 'btn-info' : 'btn-primary'}}" href="mailto:meelis.maripuu@mnemosyne.ee?cc=mihkel.putrinsh@gmail.com;memoriaal@mnemosyne.ee&subject=Tagasiside e-memoriaalilt {{doc._source.perenimi}}, {{doc._source.eesnimi}}, {{doc._source.isanimi}} kohta&body=%0D%0A%0D%0A----%0D%0Akirje ID:{{doc._source.id}}">Tagasiside selle kirje kohta</a>
                         </div>
