--- a/www/index.html
+++ b/www/index.html
@@ -140,25 +140,42 @@
  {======|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""|
 ./o--000'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'
 </pre>
-                <div class="intro">2018. aastal avatakse Tallinnas Maarjamäel memoriaal kommunistliku režiimi repressioonide
-                ohvritele. Memoriaali mälestusseinale kantakse teadaolevalt repressioonide käigus mõrvatud või
-                hukkunud Eesti inimeste nimed koos nende sünni- ja surmaajaga. SA Eesti Mälu Instituut tegeleb
-                ohvrite nimekirjade ja nende andmete korrastamisega ja on tänulik teie poolt tehtavate paranduste
-                ja täienduste eest. Isikute nimed koos sünni- ja surmaaastaga kantakse memoriaalile alaliselt ning
-                nende hilisem muutmine on väga keerukas. Seetõttu palume vähimagi kahtluse korral meiega
-                ühendust võtta, lisades oma kontaktandmed, et saaksime teiega ühendust võtta.</div>
+                <div class="intro">
+                  2018. aastal avatakse Tallinnas Maarjamäel memoriaal kommunistliku režiimi repressioonide ohvritele. 
+                  Memoriaali mälestusseinale kantakse teadaolevalt repressioonide käigus mõrvatud või hukkunud Eesti inimeste nimed koos 
+                  nende sünni- ja surmaajaga. SA Eesti Mälu Instituut tegeleb ohvrite nimekirjade ja nende andmete korrastamisega.
+                </div>
 
-                <div class="intro">Käesoleva otsingu kaudu on teil võimalus kontrollida, kas teile teadaolev isik, kes Nõukogude
-                repressioonide käigus (olles vanglas, laagris või küüditatuna asumispaigas) hukkus, on memoriaali
-                andmebaasi kantud ning kas tema kohta käivad andmed on teie teadmiste kohaselt õiged. Kui teie hinnangul on esitatud andmetes vigu, teie poolt otsitav isik esineb erinevate
-                nimekujude all korduvalt vms, siis palun informeerige meid sellest tagasiside vormi kaudu. Kui teie
-                poolt otsitava isiku kohta andmeid üldse ei leidu, siis palun saatke meile tagasiside puuduva kirje
-                kohta.</div>
+                <div class="intro">
+                  Isikute nimed koos sünni- ja surma-aastaga kantakse memoriaalile alaliselt ning nende hilisem muutmine on väga keerukas. 
+                  Seetõttu palume vähimagi kahtluse korral meiega ühendust võtta, lisades oma kontaktandmed, et saaksime teiega ühendust võtta. 
+                  Oleme väga tänulikud teie poolt tehtavate paranduste ja täienduste eest.
+                </div>
 
-                <div class="intro">Antud andmestik ei sisalda veel isikuid, kes olid represseeritud, kuid kes vabanesid
-                kinnipidamiskohast või asumiselt. Nende isikute andmed avatakse tutvumiseks 2017. aasta juunis.</div>
+                <div class="intro">
+                  Tegemist on tööstaadiumis oleva nimekirjaga, mistõttu võib ühe isiku kohta olla mitu kirjet, 
+                  kui erinevad allikad on veel sidumata. Nimekiri peaks jooksvalt täienema ja muutuma.
+                </div>
 
-                <div class="intro">Tagasiside tõrgete korral kirjutage palun aadressil: memoriaal@mnemosyne.ee</div>
+                <div class="intro">
+                  Käesoleva otsingu kaudu on teil võimalus kontrollida, kas teile teadaolev isik, kes Nõukogude repressioonide käigus (olles vanglas, 
+                  laagris või küüditatuna asumispaigas) hukkus, on memoriaali andmebaasi kantud ning kas tema kohta käivad andmed on teie teadmiste 
+                  kohaselt õiged. Kui teie hinnangul on vasakpoolses kastis esitatud andmetes vigu, teie poolt otsitav isik esineb erinevate 
+                  nimekujude all korduvalt vms, siis palun informeerige meid sellest tagasiside vormi kaudu. 
+                </div>
+
+                <div class="intro">
+                  Kui teie poolt otsitava isiku kohta andmeid üldse ei leidu, siis palun saatke meile tagasiside puuduva kirje kohta.
+                </div>
+
+                <div class="intro">
+                  Antud andmestik ei sisalda veel isikuid, kes olid represseeritud, kuid kes vabanesid kinnipidamiskohast või asumiselt. 
+                  Nende isikute andmed avatakse tutvumiseks esimesel võimalusel.
+                </div>
+
+                <div class="intro">
+                  Tagasiside tõrgete korral kirjutage palun aadressil: memoriaal@mnemosyne.ee
+                </div>
 
                 <p><hr>SA Eesti Mälu Instituut<br>
                 Suur-Ameerika 12, 10119, Tallinn<br>
@@ -190,7 +207,7 @@
                       <div style="overflow: auto;">
                         <li ng-repeat="allikas in doc._source.allikad">
                           <span ng-bind-html="allikas.kirje"></span><br/>
-                          <a href="{{allikas.allikas.href}}">{{ allikas.allikas.text }}</a>
+                          <!-- <a href="{{allikas.allikas.href}}">{{ allikas.allikas.text }}</a> -->
                         </li>
                         <!-- <input type="button" class="btn btn-info" value="Tagasiside selle kirje kohta" onclick="location.href = 'mailto:meelis.maripuu@mnemosyne.ee?cc=mihkel.putrinsh@gmail.com;memoriaal@mnemosyne.ee&subject=Tagasiside e-memoriaalilt {{doc._source.Perenimi}}, {{doc._source.Eesnimi}}, {{doc._source.Isanimi}} kohta&body=%0D%0A%0D%0A----%0D%0Akirje ID:{{doc._source.id}}';"> -->
                       </div>
