--- a/www/index.html
+++ b/www/index.html
@@ -90,7 +90,7 @@
     </script>
 
 </head>
-<body ng-app="tutorial" eui-index="'kirjed'" eui-highlight="ejs.Highlight(['emi_id','Eesnimi','Perenimi','Isanimi','Sünd','Surm','allikad.kirje']).preTags('').postTags('')" eui-enabled="true" ng-init="indexVM.pageSize=50"
+<body ng-app="tutorial" eui-index="'kirjed3'" eui-highlight="ejs.Highlight(['emi_id','Eesnimi','Perenimi','Isanimi','Sünd','Surm','allikad.kirje']).preTags('').postTags('')" eui-enabled="true" ng-init="indexVM.pageSize=50"
       eui-highlight="ejs.Highlight(allikad.kirje).preTags('<b>').postTags('</b>')"
       eui-enabled="true">
 
