--- a/www/index.html
+++ b/www/index.html
@@ -140,41 +140,93 @@
  {======|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""|
 ./o--000'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'
 </pre>
+                <h1>EESTI KOMMUNISMIOHVRID 1940–1991</h1>
+
                 <div class="intro">
-                  2018. aastal avatakse Tallinnas Maarjamäel memoriaal kommunistliku režiimi repressioonide ohvritele. 
-                  Memoriaali mälestusseinale kantakse teadaolevalt repressioonide käigus mõrvatud või hukkunud Eesti inimeste nimed koos 
-                  nende sünni- ja surmaajaga. SA Eesti Mälu Instituut tegeleb ohvrite nimekirjade ja nende andmete korrastamisega.
+                  2018. aastal avatakse Tallinnas Maarjamäel memoriaal kommunistliku
+                  režiimi terrori ohvritele Eestis 1940-1991. Memoriaali mälestusseinale
+                  kantakse teadaolevalt terrori käigus mõrvatud või hukkunud Eesti
+                  inimeste nimed koos nende sünni- ja surmaajaga. SA Eesti Mälu
+                  Instituut tegeleb ohvrite nimekirjade ja nende andmete
+                  korrastamisega.
                 </div>
 
                 <div class="intro">
-                  Isikute nimed koos sünni- ja surma-aastaga kantakse memoriaalile alaliselt ning nende hilisem muutmine on väga keerukas. 
-                  Seetõttu palume vähimagi kahtluse korral meiega ühendust võtta, lisades oma kontaktandmed, et saaksime teiega ühendust võtta. 
-                  Oleme väga tänulikud teie poolt tehtavate paranduste ja täienduste eest.
+                  Isikute nimed koos sünni- ja surma-aastaga kantakse memoriaalile
+                  alaliselt ning nende hilisem muutmine on väga keerukas. Seetõttu
+                  palume teid eksimuste leidmise korral meiega ühendust võtta, lisades
+                  oma kontaktandmed, et saaksime vajadusel teiega täiendavalt
+                  ühendust võtta. Oleme väga tänulikud teie poolt tehtavate paranduste
+                  ja täienduste eest. Tegemist on ajas muutuva ja täieneva
+                  andmekoguga, mistõttu võib ühe isiku kohta olla mitu kirjet, kui
+                  erinevad allikad on veel sidumata. Nimekiri täieneb ja muutub
+                  jooksvalt min. üks kord nädalas.
                 </div>
 
                 <div class="intro">
-                  Tegemist on tööstaadiumis oleva nimekirjaga, mistõttu võib ühe isiku kohta olla mitu kirjet, 
-                  kui erinevad allikad on veel sidumata. Nimekiri peaks jooksvalt täienema ja muutuma.
+                  Kommunismiohvrite memoriaali puhul <u>käsitletakse terrori ohvritena ja
+                  kantakse mälestusseinale</u> esmajoones isikuid kes:
+                  <ul>
+                    <li>on aastatel 1940-1991 Nõukogude Liidu okupatsioonivõimu poolt
+                      <b>kohtuväliselt represseeritud ja alusetult süüdimõistetud
+                      ning</b> rehabiliteeritud vastavalt Eesti Vabariigi seadusele
+                      kohtuväliselt represseeritud ja alusetult süüdimõistetud isikute
+                      rehabiliteerimise kohta;</li>
+                    <li>on teadaolevalt mõrvatud Nõukogude võimuesindajate vahetu
+                      isikuvastase ründe tagajärjel.</li>
+                  </ul>
+                 
                 </div>
 
                 <div class="intro">
-                  Käesoleva otsingu kaudu on teil võimalus kontrollida, kas teile teadaolev isik, kes Nõukogude repressioonide käigus (olles vanglas, 
-                  laagris või küüditatuna asumispaigas) hukkus, on memoriaali andmebaasi kantud ning kas tema kohta käivad andmed on teie teadmiste 
-                  kohaselt õiged. Kui teie hinnangul on vasakpoolses kastis esitatud andmetes vigu, teie poolt otsitav isik esineb erinevate 
-                  nimekujude all korduvalt vms, siis palun informeerige meid sellest tagasiside vormi kaudu. 
+                  Kommunismiohvrite memoriaali puhul <u>ei käsitleta terrori ohvritena ega
+                  kanta mälestusseinale</u> inimeste nimesid, kes:
+                  <ul>
+                    <li>langesid 1940/1941 metsavennana või Omakaitse liikmena
+                      lahingutes Nõukogude võimuga;</li>
+                    <li>hukkusid sõjaohritena lahingutegevuse tagajärjel;</li>
+                    <li>lahkusid 1941. aasta suvel Eestist evakueeritavatena
+                      Nõukogude tagalasse ja surid seal ilma, et nende suhtes oleks
+                      kohaldatud repressioone;</li>
+                    <li>mobiliseeriti 1941. aasta suvel Punaarmeesse ja surid
+                      Nõukogude tagalas tööpataljonides haiguste, ebainimlike
+                      elamistingimuste või selgelt tuvastamata asjaolude tõttu.
+                      Ohvritena käsitletakse isikuid, kes tööpataljonis olles poliitilistel
+                      põhjustel arreteeriti ning kohtu alla anti;</li>
+                    <li>sõja kestel Punaarmee üksuste koosseisus lahingutegevuses
+                      langenud või muus sõjaolukorras surnud isikuid;</li>
+                    <li>langesid kommunistliku terrori ohvritena, kuid olid ise osalenud
+                      võitlustes Nõukogude hävituspataljonide ridades või astunud
+                      kommunistliku partei liikmeks enne 1954. aastat.</li>
+                  </ul>
+                 
                 </div>
 
                 <div class="intro">
-                  Kui teie poolt otsitava isiku kohta andmeid üldse ei leidu, siis palun saatke meile tagasiside puuduva kirje kohta.
+                  Käesoleva otsingu kaudu on teil võimalus kontrollida, kas teile
+                  teadaolev isik, kes Nõukogude repressioonide käigus (olles vanglas,
+                  laagris või küüditatuna asumispaigas) hukkus, on memoriaali
+                  andmebaasi kantud ning kas tema kohta käivad andmed on teie
+                  teadmiste kohaselt õiged. Kui teie hinnangul on vasakpoolses kastis
+                  esitatud andmetes vigu, teie poolt otsitav isik esineb erinevate
+                  nimekujude all korduvalt vms, siis palun informeerige meid sellest
+                  tagasiside vormi kaudu. 
                 </div>
 
                 <div class="intro">
-                  Antud andmestik ei sisalda veel isikuid, kes olid represseeritud, kuid kes vabanesid kinnipidamiskohast või asumiselt. 
-                  Nende isikute andmed avatakse tutvumiseks esimesel võimalusel.
+                  Kui teie poolt otsitava isiku kohta andmeid üldse ei leidu, siis palun
+                  saatke meile tagasiside puuduva kirje kohta.
                 </div>
 
                 <div class="intro">
-                  Tagasiside tõrgete korral kirjutage palun aadressil: memoriaal@mnemosyne.ee
+                  Antud andmestik ei sisalda veel isikuid, kes olid represseeritud, kuid
+                  kes vabanesid kinnipidamiskohast või asumiselt. Nende isikute
+                  andmed avatakse tutvumiseks esimesel võimalusel.
+                </div>
+
+                <div class="intro">
+                  Tagasiside tõrgete korral kirjutage palun aadressil:
+                  memoriaal@mnemosyne.ee
                 </div>
 
                 <p><hr>SA Eesti Mälu Instituut<br>
@@ -207,7 +259,9 @@
                       <div style="overflow: auto;">
                         <li ng-repeat="allikas in doc._source.allikad">
                           <span ng-bind-html="allikas.kirje"></span><br/>
-                          <a href="{{allikas.allikas.href}}">{{ allikas.allikas.text }}</a>
+                          <!-- <a href="{{allikas.allikas.href}}">{{ allikas.allikas.text }}</a> -->
+                          <span>[{{ allikas.isikukood }}]</span>
+                          <span>{{ allikas.allikas.text }}</span>
                         </li>
                         <!-- <input type="button" class="btn btn-info" value="Tagasiside selle kirje kohta" onclick="location.href = 'mailto:meelis.maripuu@mnemosyne.ee?cc=mihkel.putrinsh@gmail.com;memoriaal@mnemosyne.ee&subject=Tagasiside e-memoriaalilt {{doc._source.Perenimi}}, {{doc._source.Eesnimi}}, {{doc._source.Isanimi}} kohta&body=%0D%0A%0D%0A----%0D%0Akirje ID:{{doc._source.id}}';"> -->
                       </div>
