--- a/www/index_11_apr.html
+++ b/www/index_11_apr.html
@@ -97,17 +97,20 @@
  {======|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""|
 ./o--000'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'
 </pre>
-                <h1>Terrori ohvrite nimekiri</h1>
+
+                <h1>EESTI KOMMUNISMIOHVRID 1940–1991</h1>
+
+                <h2>Hukkunute nimekiri</h2>
 
                 <div class="intro">
                   2018. aasta augustis avatakse Tallinnas Maarjamäel memoriaal kommunistliku režiimi terrori ohvritele Eestis 1940–1991. SA Eesti Mälu Instituut tegeleb ohvrite nimekirjade ja nende andmete korrastamisega. Memoriaali mälestusseinale kantakse terrori käigus mõrvatud ja vangistuses või asumisel surnud Eesti inimeste nimed koos nende sünni- ja surmaajaga.
                 </div>
 
                 <div class="intro">
-                  Memoriaali mälestusseinale kantavate isikute nimekirjaga saate tutvuda <a href="Kommunismiohvrite memoriaali nimekiri.html">siin</a>.
+                  Memoriaali mälestusseinale kantavate isikute nimekirjaga saate tutvuda <a href="http://dev.memoriaal.ee/Kommunismiohvrite%20memoriaali%20nimekiri.html">siin</a>.
                 </div>
 
-                <h1>Kõigi kannatanute nimekiri</h1>
+                <h2>Kõigi kannatanute nimekiri</h2>
 
                 <div class="intro">
                   Lisaks terrori läbi hukkunutele tehakse memoriaali juures elektrooniliselt kättesaadavaks ka kõikide teiste kannatanute nimed, sealhulgas need, kes vangistusest või asumiselt vabanesid; need, kes kuulusid küüditamisele, kuid keda ei küüditatud ja need, kelle saatus on teadmata.
