--- a/www/index_11_apr.html
+++ b/www/index_11_apr.html
@@ -107,7 +107,7 @@
                 </div>
 
                 <div class="intro">
-                  Memoriaali mälestusseinale kantavate isikute nimekirjaga saate tutvuda <a href="http://dev.memoriaal.ee/Kommunismiohvrite%20memoriaali%20nimekiri.html">siin</a>.
+                  Memoriaali mälestusseinale kantavate isikute nimekirjaga saate tutvuda <a class="bg-info" style="font-size: 2em; padding: 0.1em" href="http://dev.memoriaal.ee/Kommunismiohvrite%20memoriaali%20nimekiri.html">siin</a>.
                 </div>
 
                 <h2>Kõigi kannatanute nimekiri</h2>
