export and publish

--- a/www/index.html
+++ b/www/index.html
@@ -175,7 +175,7 @@
                     <li>on teadaolevalt mõrvatud Nõukogude võimuesindajate vahetu
                       isikuvastase ründe tagajärjel.</li>
                   </ul>
-                 
+
                 </div>
 
                 <div class="intro">
@@ -199,7 +199,7 @@
                       võitlustes Nõukogude hävituspataljonide ridades või astunud
                       kommunistliku partei liikmeks enne 1954. aastat.</li>
                   </ul>
-                 
+
                 </div>
 
                 <div class="intro">
@@ -210,7 +210,7 @@
                   teadmiste kohaselt õiged. Kui teie hinnangul on vasakpoolses kastis
                   esitatud andmetes vigu, teie poolt otsitav isik esineb erinevate
                   nimekujude all korduvalt vms, siis palun informeerige meid sellest
-                  tagasiside vormi kaudu. 
+                  tagasiside vormi kaudu.
                 </div>
 
                 <div class="intro">
@@ -253,7 +253,7 @@
                         <p>id: {{doc._source.emi_id}}</p>
                         <!-- <pre>{{doc._source}}</pre> -->
                         <div class="btn-group">
-                          <a class="btn btn-sm active {{doc._source.kasHukkunud === '1' ? 'btn-info' : 'btn-primary'}}" href="mailto:meelis.maripuu@mnemosyne.ee?cc=mihkel.putrinsh@gmail.com;memoriaal@mnemosyne.ee&subject=Tagasiside e-memoriaalilt {{doc._source.Perenimi}}, {{doc._source.Eesnimi}}, {{doc._source.Isanimi}} kohta&body=%0D%0A%0D%0A----%0D%0Akirje ID:{{doc._source.emi_id}}">Tagasiside selle kirje kohta</a>
+                          <a class="btn btn-sm active {{doc._source.kivi === '!' ? 'btn-info' : 'btn-primary'}}" href="mailto:meelis.maripuu@mnemosyne.ee?cc=mihkel.putrinsh@gmail.com;memoriaal@mnemosyne.ee&subject=Tagasiside e-memoriaalilt {{doc._source.Perenimi}}, {{doc._source.Eesnimi}}, {{doc._source.Isanimi}} kohta&body=%0D%0A%0D%0A----%0D%0Akirje ID:{{doc._source.emi_id}}">Tagasiside selle kirje kohta</a>
                         </div>
                       </div>
                       <div style="overflow: auto;">
