--- a/www/index_11_apr.html
+++ b/www/index_11_apr.html
@@ -90,35 +90,54 @@
 
             <div class="col-xs-10 col-xs-offset-1 col-lg-8 col-lg-offset-2 main" ng-if="indexVM.query == null ? true : false">
 
-                <pre class="rong">            __  __                                     _                       _
+                <!-- <pre class="rong">            __  __                                     _                       _
     o O O|  \/  |   ___    _ __     ___      _ _    (_)    __ _    __ _     | |
    o     | |\/| |  / -_)  | '  \   / _ \    | '_|   | |   / _` |  / _` |    | |
   TS__[O]|_|__|_|  \___|  |_|_|_|  \___/   _|_|_   _|_|_  \__,_|  \__,_|   _|_|_
  {======|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""|
 ./o--000'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'
-</pre>
+</pre> -->
 
                 <h1>EESTI KOMMUNISMIOHVRID 1940–1991</h1>
 
                 <h2>Hukkunute nimekiri</h2>
 
                 <div class="intro">
-                  2018. aasta augustis avatakse Tallinnas Maarjamäel memoriaal kommunistliku režiimi terrori ohvritele Eestis 1940–1991. SA Eesti Mälu Instituut tegeleb ohvrite nimekirjade ja nende andmete korrastamisega. Memoriaali mälestusseinale kantakse terrori käigus mõrvatud ja vangistuses või asumisel surnud Eesti inimeste nimed koos nende sünni- ja surmaajaga.
+                  2018. aasta augustis avatakse Tallinnas Maarjamäel memoriaal kommunistliku režiimi terrori ohvritele Eestis 1940–1991. SA Eesti Mälu Instituut tegeleb ohvrite nimekirjade ja nende andmete korrastamisega. Memoriaali mälestusseinale kantakse terrori käigus mõrvatud ja vangistuses või asumisel surnud Eesti inimeste nimed koos nende sünni- ja surmaajaga. SA Eesti Mälu Instituut tegeleb ohvrite nimekirjade ja nende andmete korrastamisega.
                 </div>
 
                 <div class="intro">
-                  Memoriaali mälestusseinale kantavate isikute nimekirjaga saate tutvuda <a class="bg-info" style="font-size: 2em; padding: 0.1em" href="http://dev.memoriaal.ee/Kommunismiohvrite%20memoriaali%20nimekiri.html">siin</a>.
+                  Memoriaali mälestusseinale kantavate isikute lõpliku nimekirjaga saate tutvuda <a class="bg-info" style="font-size: 2em; padding: 0.1em" href="http://dev.memoriaal.ee/Kommunismiohvrite%20memoriaali%20nimekiri.html">siin</a>. Edasised parandused on võimalik sisse viia vaid elektroonilisse väljundisse.
                 </div>
 
                 <h2>Kõigi kannatanute nimekiri</h2>
 
                 <div class="intro">
-                  Lisaks terrori läbi hukkunutele tehakse memoriaali juures elektrooniliselt kättesaadavaks ka kõikide teiste kannatanute nimed, sealhulgas need, kes vangistusest või asumiselt vabanesid; need, kes kuulusid küüditamisele, kuid keda ei küüditatud ja need, kelle saatus on teadmata.
+                  Lisaks terrori läbi hukkunutele tehakse elektrooniliselt kättesaadavaks ka kõikide teiste kannatanute nimed, sealhulgas need, kes vangistusest või asumiselt vabanesid; need, kes kuulusid küüditamisele, kuid keda ei küüditatud ja need, kelle saatus on teadmata. Kõigi nende nimed on leitavad siit kodulehelt.
                 </div>
 
                 <div class="intro">
-                  Avame siin kodulehel kõigi kommunismiohvrite nimekirja avalikkusele kontrollimiseks ja täiendamiseks 11. aprillil 2018.
+                  Palume kontrollida Teile teadaolevate represseeritute nimesid ning kui vaja, meile paranduste ja täienduste osas tagasisidet anda. Teretulnud on ettepanekud ka juhul, kui kahe nimekuju puhul on tegemist tõenäoliselt sama isikuga ja tekib kahtlus, et erinevad kirjed oleks tarvis siduda.
                 </div>
+
+                <div class="intro">
+                  Oleme paranduste ja täienduste eest väga tänulikud. Nendest on juba olnud suur abi hukkunute nimestiku koostamisel. Aktsepteeritud parandused viime sisse jooksvalt, seega täieneb ja muutub nimekiri pidevalt.
+                </div>
+
+                <div class="intro">
+                  Tagasiside tõrgete korral kirjutage palun aadressil: memoriaal@mnemosyne.ee.
+                </div>
+
+
+                <h1>Nimekirjadesse kuulumise alused</h1>
+                <li class="intro">
+                  Nimekirja kantakse aastatel 1940-1991 Nõukogude Liidu okupatsioonivõimu poolt kohtuväliselt represseeritud või alusetult süüdimõistetud ning vastavalt Eesti Vabariigi seadusele kohtuväliselt represseeritud ja alusetult süüdimõistetud isikute rehabiliteerimise kohta rehabiliteerimisele kuulunud isikud, samuti repressioonide käigus hukkunud isikud.
+                </li>
+
+                <h2>Kõigi kannatanute nimekiri</h2>
+
+                <h2>neist hukkunute nimekirjas ja Mälestusseinal</h2>
+                <h2>Kommunismiohvrite memoriaali puhul ei kanta mälestusseinale nende nimesid, kes</h2>
 
             </div>
         </div>
