--- a/www/index_all.html
+++ b/www/index_all.html
@@ -48,6 +48,28 @@
           color: dark-gray;
           background-color: white;
         }
+        .person > li {
+          margin: 0 1em 0 1em;
+        }
+        .perekond {
+          border-radius: 5px;
+          border: 1px gray solid;
+          padding: 1em 1em 1em 1em;
+          margin: 2em 1em 0 0;
+        }
+        .perekond > .perekood {
+          /* display: inline-table; */
+          border-radius: 3px;
+          width: intrinsic;
+          margin: -1.7em 0 0 0em;
+          padding: 0 1em 0 1em;
+          background: #555;
+          color: white;
+        }
+        .light {
+          /* display: inline-table; */
+          color: gray;
+        }
         pre {
           white-space:  pre-wrap;       /* css-3 */
           white-space:  -moz-pre-wrap;  /* Mozilla, since 1999 */
@@ -86,18 +108,43 @@
                                 + document.getElementById('comment').value.replace(/\n/g,'%0D%0A')
                                 + '\''
             )
+          setHash(document.getElementById('query').value)
         }
         function initQuery() {
-          document.getElementById('query').value = window.location.hash.substr(1);
+          setQuery(window.location.hash.substr(1))
+          // console.log('foo');
         }
-        function setQuery(a) {
-          // console.log(a.childNodes[1]);
-          document.getElementById('query')setAttribute('value', a.childNodes[1].innerHTML);
+
+        function setQuery(q) {
+          console.log(q);
+          let element = document.getElementById('query')
+          element.value = q
+
+          if ("createEvent" in document) {
+            var evt = document.createEvent("HTMLEvents")
+            evt.initEvent("change", false, true)
+            element.dispatchEvent(evt)
+          }
+          else {
+            element.fireEvent("onchange")
+          }
+          window.scrollTo(0,0)
+          setHash(a)
+          // console.log('baz');
+        }
+
+        function setHash(h) {
+          if(history.pushState) {
+              history.pushState(null, null, '#' + h);
+          }
+          else {
+              location.hash = '#' + h;
+          }
         }
     </script>
 
 </head>
-<body ng-app="tutorial" eui-index="'persons'" eui-highlight="ejs.Highlight(['emi_id']).preTags('').postTags('')" eui-enabled="true" ng-init="indexVM.pageSize=50"
+<body ng-app="tutorial" eui-index="'persons'" eui-highlight="ejs.Highlight(['id']).preTags('').postTags('')" eui-enabled="true" ng-init="indexVM.pageSize=50"
       eui-highlight="ejs.Highlight(kirjed).preTags('<b>').postTags('</b>')"
       eui-enabled="true"
       onload="initQuery()">
@@ -139,108 +186,82 @@
                 </select> Kirjet lehel -->
             </div>
 
-            <div class="col-xs-9 col-xs-offset-3 col-lg-10 col-lg-offset-2 main" ng-if="indexVM.query == null ? true : false">
+            <div class="col-xs-10 col-xs-offset-1 col-lg-8 col-lg-offset-2 main" ng-if="indexVM.query == null ? true : false">
 
-                <pre class="rong">            __  __                                     _                       _
+                <!-- <pre class="rong">            __  __                                     _                       _
     o O O|  \/  |   ___    _ __     ___      _ _    (_)    __ _    __ _     | |
    o     | |\/| |  / -_)  | '  \   / _ \    | '_|   | |   / _` |  / _` |    | |
   TS__[O]|_|__|_|  \___|  |_|_|_|  \___/   _|_|_   _|_|_  \__,_|  \__,_|   _|_|_
  {======|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""|_|"""""|
 ./o--000'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'"`-0-0-'
-            </pre>
+</pre> -->
+
                 <h1>EESTI KOMMUNISMIOHVRID 1940–1991</h1>
 
+                <h2>Hukkunute nimekiri</h2>
+
                 <div class="intro">
-                  2018. aastal avatakse Tallinnas Maarjamäel memoriaal kommunistliku
-                  režiimi terrori ohvritele Eestis 1940-1991. Memoriaali mälestusseinale
-                  kantakse teadaolevalt terrori käigus mõrvatud või hukkunud Eesti
-                  inimeste nimed koos nende sünni- ja surmaajaga. SA Eesti Mälu
-                  Instituut tegeleb ohvrite nimekirjade ja nende andmete
-                  korrastamisega.
+                  2018. aasta augustis avatakse Tallinnas Maarjamäel memoriaal kommunistliku režiimi terrori ohvritele Eestis 1940–1991. SA Eesti Mälu Instituut tegeleb ohvrite nimekirjade ja nende andmete korrastamisega. Memoriaali mälestusseinale kantakse terrori käigus mõrvatud ja vangistuses või asumisel surnud Eesti inimeste nimed koos nende sünni- ja surmaajaga. SA Eesti Mälu Instituut tegeleb ohvrite nimekirjade ja nende andmete korrastamisega.
                 </div>
 
                 <div class="intro">
-                  Isikute nimed koos sünni- ja surma-aastaga kantakse memoriaalile
-                  alaliselt ning nende hilisem muutmine on väga keerukas. Seetõttu
-                  palume teid eksimuste leidmise korral meiega ühendust võtta, lisades
-                  oma kontaktandmed, et saaksime vajadusel teiega täiendavalt
-                  ühendust võtta. Oleme väga tänulikud teie poolt tehtavate paranduste
-                  ja täienduste eest. Tegemist on ajas muutuva ja täieneva
-                  andmekoguga, mistõttu võib ühe isiku kohta olla mitu kirjet, kui
-                  erinevad allikad on veel sidumata. Nimekiri täieneb ja muutub
-                  jooksvalt min. üks kord nädalas.
+                  Memoriaali mälestusseinale kantavate isikute lõpliku nimekirjaga saate tutvuda <a class="bg-info" style="font-size: 2em; padding: 0.1em" href="http://memoriaal.ee/Kommunismiohvrite%20memoriaali%20nimekiri.html">siin</a>. Edasised parandused on võimalik sisse viia vaid elektroonilisse väljundisse.
+                </div>
+
+                <h2>Kõigi kannatanute nimekiri</h2>
+
+                <div class="intro">
+                  Lisaks terrori läbi hukkunutele tehakse elektrooniliselt kättesaadavaks ka kõikide teiste kannatanute nimed, sealhulgas need, kes vangistusest või asumiselt vabanesid; need, kes kuulusid küüditamisele, kuid keda ei küüditatud ja need, kelle saatus on teadmata. Kõigi nende nimed on leitavad siit kodulehelt.
                 </div>
 
                 <div class="intro">
-                  Kommunismiohvrite memoriaali puhul <u>käsitletakse terrori ohvritena ja
-                  kantakse mälestusseinale</u> esmajoones isikuid kes:
-                  <ul>
-                    <li>on aastatel 1940-1991 Nõukogude Liidu okupatsioonivõimu poolt
-                      <b>kohtuväliselt represseeritud ja alusetult süüdimõistetud
-                      ning</b> rehabiliteeritud vastavalt Eesti Vabariigi seadusele
-                      kohtuväliselt represseeritud ja alusetult süüdimõistetud isikute
-                      rehabiliteerimise kohta;</li>
-                    <li>on teadaolevalt mõrvatud Nõukogude võimuesindajate vahetu
-                      isikuvastase ründe tagajärjel.</li>
-                  </ul>
-
+                  Palume kontrollida Teile teadaolevate represseeritute nimesid ning kui vaja, meile paranduste ja täienduste osas tagasisidet anda. Teretulnud on ettepanekud ka juhul, kui kahe nimekuju puhul on tegemist tõenäoliselt sama isikuga ja tekib kahtlus, et erinevad kirjed oleks tarvis siduda.
                 </div>
 
                 <div class="intro">
-                  Kommunismiohvrite memoriaali puhul <u>ei käsitleta terrori ohvritena ega
-                  kanta mälestusseinale</u> inimeste nimesid, kes:
-                  <ul>
-                    <li>langesid 1940/1941 metsavennana või Omakaitse liikmena
-                      lahingutes Nõukogude võimuga;</li>
-                    <li>hukkusid sõjaohritena lahingutegevuse tagajärjel;</li>
-                    <li>lahkusid 1941. aasta suvel Eestist evakueeritavatena
-                      Nõukogude tagalasse ja surid seal ilma, et nende suhtes oleks
-                      kohaldatud repressioone;</li>
-                    <li>mobiliseeriti 1941. aasta suvel Punaarmeesse ja surid
-                      Nõukogude tagalas tööpataljonides haiguste, ebainimlike
-                      elamistingimuste või selgelt tuvastamata asjaolude tõttu.
-                      Ohvritena käsitletakse isikuid, kes tööpataljonis olles poliitilistel
-                      põhjustel arreteeriti ning kohtu alla anti;</li>
-                    <li>sõja kestel Punaarmee üksuste koosseisus lahingutegevuses
-                      langenud või muus sõjaolukorras surnud isikuid;</li>
-                    <li>langesid kommunistliku terrori ohvritena, kuid olid ise osalenud
-                      võitlustes Nõukogude hävituspataljonide ridades või astunud
-                      kommunistliku partei liikmeks enne 1954. aastat.</li>
-                  </ul>
-
+                  Oleme paranduste ja täienduste eest väga tänulikud. Nendest on juba olnud suur abi hukkunute nimestiku koostamisel. Aktsepteeritud parandused viime sisse jooksvalt, seega täieneb ja muutub nimekiri pidevalt.
                 </div>
 
                 <div class="intro">
-                  Käesoleva otsingu kaudu on teil võimalus kontrollida, kas teile
-                  teadaolev isik, kes Nõukogude repressioonide käigus (olles vanglas,
-                  laagris või küüditatuna asumispaigas) hukkus, on memoriaali
-                  andmebaasi kantud ning kas tema kohta käivad andmed on teie
-                  teadmiste kohaselt õiged. Kui teie hinnangul on vasakpoolses kastis
-                  esitatud andmetes vigu, teie poolt otsitav isik esineb erinevate
-                  nimekujude all korduvalt vms, siis palun informeerige meid sellest
-                  tagasiside vormi kaudu.
+                  Tagasiside tõrgete korral kirjutage palun aadressil: memoriaal@mnemosyne.ee.
                 </div>
 
-                <div class="intro">
-                  Kui teie poolt otsitava isiku kohta andmeid üldse ei leidu, siis palun
-                  saatke meile tagasiside puuduva kirje kohta.
-                </div>
 
-                <div class="intro">
-                  Antud andmestik ei sisalda veel isikuid, kes olid represseeritud, kuid
-                  kes vabanesid kinnipidamiskohast või asumiselt. Nende isikute
-                  andmed avatakse tutvumiseks esimesel võimalusel.
-                </div>
+                <h1>Nimekirjadesse kuulumise alused</h1>
 
-                <div class="intro">
-                  Tagasiside tõrgete korral kirjutage palun aadressil:
-                  memoriaal@mnemosyne.ee
-                </div>
+                <h2>Kõigi kannatanute nimekiri</h2>
+                <li class="intro">
+                  Nimekirja kantakse aastatel 1940-1991 Nõukogude Liidu okupatsioonivõimu poolt kohtuväliselt represseeritud või alusetult süüdimõistetud ning vastavalt Eesti Vabariigi seadusele kohtuväliselt represseeritud ja alusetult süüdimõistetud isikute rehabiliteerimise kohta rehabiliteerimisele kuulunud isikud, samuti repressioonide käigus hukkunud isikud.
+                </li>
 
-                <p><hr>SA Eesti Mälu Instituut<br>
-                Suur-Ameerika 12, 10119, Tallinn<br>
-                E-mail: info@mnemosyne.ee<br>
-                Telefon: 6645039</pre>
+
+                <h2>neist hukkunute nimekirjas ja Mälestusseinal</h2>
+                <li class="intro">
+                  Need, kes on terrori käigus mõrvatud ja vangistuses või asumisel surnud või on teadaolevalt mõrvatud Nõukogude võimuesindajate vahetu isikuvastase ründe tagajärjel
+                </li>
+
+                <h2>Kommunismiohvrite memoriaali puhul ei kanta mälestusseinale nende nimesid, kes</h2>
+                <li class="intro">langesid 1940/1941 metsavennana või Omakaitse liikmena lahingutes Nõukogude võimuga
+                </li>
+                <li class="intro">hukkusid sõjaohvritena lahingutegevuse tagajärjel
+                </li>
+                <li class="intro">lahkusid 1941. aasta suvel Eestist evakueeritavatena Nõukogude tagalasse ja surid seal ilma, et nende suhtes oleks kohaldatud repressioone
+                </li>
+                <li class="intro">mobiliseeriti 1941. aasta suvel Punaarmeesse ja surid Nõukogude tagalas tööpataljonides haiguste, ebainimlike elamistingimuste või selgelt tuvastamata asjaolude tõttu. Ohvritena käsitletakse isikuid, kes tööpataljonis olles poliitilistel põhjustel arreteeriti ning kohtu alla anti
+                </li>
+                <li class="intro">sõja kestel Punaarmee üksuste koosseisus lahingutegevuses langenud või muus sõjaolukorras surnud isikuid
+                </li>
+                <li class="intro">langesid kommunistliku terrori ohvritena, kuid olid ise osalenud võitlustes Nõukogude hävituspataljonide ridades või astunud kommunistliku partei liikmeks enne 1954. aastat
+                </li>
+
+
+                <hr>
+                <p>
+                  SA Eesti Mälu Instituut<br>
+                  Suur-Ameerika 12, 10119, Tallinn<br>
+                  E-mail: info@mnemosyne.ee<br>
+                  Telefon: 6484962
+                </p>
             </div>
             <div class="col-xs-9 col-xs-offset-3 col-lg-10 col-lg-offset-2 main" ng-if="indexVM.query == null ? false : true">
                 <!-- <h1><eui-simple-paging></eui-simple-paging></h1> -->
@@ -263,30 +284,35 @@
                         <p>id: {{doc._source.id}}</p>
                         <!-- <pre>{{doc._source}}</pre> -->
                         <div class="btn-group">
-                          <a class="btn btn-sm active {{doc._source.kivi === '!' ? 'btn-info' : 'btn-primary'}}" href="mailto:meelis.maripuu@mnemosyne.ee?cc=mihkel.putrinsh@gmail.com;memoriaal@mnemosyne.ee&subject=Tagasiside e-memoriaalilt {{doc._source.Perenimi}}, {{doc._source.Eesnimi}}, {{doc._source.Isanimi}} kohta&body=%0D%0A%0D%0A----%0D%0Akirje ID:{{doc._source.emi_id}}">Tagasiside selle kirje kohta</a>
+                          <a class="btn btn-sm active {{doc._source.kivi === '!' ? 'btn-info' : 'btn-primary'}}" href="mailto:meelis.maripuu@mnemosyne.ee?cc=mihkel.putrinsh@gmail.com;memoriaal@mnemosyne.ee&subject=Tagasiside e-memoriaalilt {{doc._source.perenimi}}, {{doc._source.eesnimi}}, {{doc._source.isanimi}} kohta&body=%0D%0A%0D%0A----%0D%0Akirje ID:{{doc._source.id}}">Tagasiside selle kirje kohta</a>
                         </div>
                       </div>
-                      <div style="overflow: auto;">
+                      <div style="overflow: auto;" class="person">
                         <li ng-repeat="kirje in doc._source.kirjed">
-                          <a href="" onclick="setQuery(this)">
-                            <span ng-bind-html="kirje.kirjekood"></span><br/>
-                            <span ng-bind-html="kirje.kirje"></span><br/>
-                          </a>
+                          <!-- <a href="" onclick="setQuery(this.childNodes[1].innerHTML)"> -->
+                            <span ng-bind-html="kirje.kirjekood"></span>, <span class="light" ng-bind-html="kirje.allikas"></span><br/>
+                            <span ng-bind-html="kirje.kirje"></span> <span class="light" ng-bind-html="kirje.kirjesaba"></span><br/>
+                          <!-- </a> -->
                           <!-- <a href="{{allikas.allikas.href}}">{{ allikas.allikas.text }}</a> -->
                           <!-- <span>[{{ allikas.isikukood }}]</span> -->
                           <!-- <span>{{ allikas.allikas.text }}</span> -->
                         </li>
-                        <hr/>
-                        <li ng-repeat="kirje in doc._source.pereseos">
-                          <span ng-bind-html="kirje.kirjekood"></span><br/>
-                          <span ng-bind-html="kirje.kirje"></span><br/>
-                          <!-- <a href="{{allikas.allikas.href}}">{{ allikas.allikas.text }}</a> -->
-                          <!-- <span>[{{ allikas.isikukood }}]</span> -->
-                          <!-- <span>{{ allikas.allikas.text }}</span> -->
-                        </li>
+                        <div ng-repeat="pereseos in doc._source.pereseos" class="perekond">
+                          <p class="perekood">Perekond {{pereseos.perekood}}, {{pereseos.nimekiri}}</p>
+                          <li ng-repeat="kirje in pereseos.kirjed">
+                            <!-- <a href="" onclick="setQuery('{{kirje.kirje.split(' ').slice(0,3).join(' ')}}')">foo</a> -->
+                            <a href="" onclick="setQuery(this.getAttribute('words'))" words={{kirje.words}}>
+                              <span ng-bind-html="kirje.kirjekood"></span><br/>
+                              <span ng-bind-html="kirje.kirje"></span><br/>
+                            </a>
+                            <!-- <a href="{{allikas.allikas.href}}">{{ allikas.allikas.text }}</a> -->
+                            <!-- <span>[{{ allikas.isikukood }}]</span> -->
+                            <!-- <span>{{ allikas.allikas.text }}</span> -->
+                          </li>
+                        </div>
                         <!-- <input type="button" class="btn btn-info" value="Tagasiside selle kirje kohta" onclick="location.href = 'mailto:meelis.maripuu@mnemosyne.ee?cc=mihkel.putrinsh@gmail.com;memoriaal@mnemosyne.ee&subject=Tagasiside e-memoriaalilt {{doc._source.Perenimi}}, {{doc._source.Eesnimi}}, {{doc._source.Isanimi}} kohta&body=%0D%0A%0D%0A----%0D%0Akirje ID:{{doc._source.id}}';"> -->
                       </div>
-                      <pre>{{doc._source}}</pre>
+                      <!-- <pre>{{doc._source}}</pre> -->
                     </div>
                     <hr/>
                 </div>
